--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -5,9 +5,9 @@ jobs:
   build:
     name: Build and Test
     runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      security-events: write
+    permissions: write-all
+#      contents: read
+#      security-events: write
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -32,4 +32,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         if: success() || failure()
         with:
-          sarif_file: results.sarif
+          sarif_file: ${{ steps.scan.outputs.sarif }}
