--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -10,9 +10,9 @@ jobs:
   build:
     name: Build and Test
     runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      security-events: write
+    permissions: read-write
+#      contents: read
+#      security-events: write
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -43,10 +43,10 @@ jobs:
     if: ${{ github.ref == 'refs/heads/master' }}
     needs: [ build ]
     runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      packages: write
-      security-events: write
+    permissions: read-write
+#      contents: read
+#      packages: write
+#      security-events: write
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -61,18 +61,18 @@ jobs:
           chmod +x gradlew
           ./gradlew bootBuildImage \
             --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
-#      - name: OCI image vulnerability scanning
-#        uses: anchore/scan-action@v3
-#        id: scan
-#        with:
-#          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
-#          fail-build: false
-#          severity-cutoff: high
-#      - name: Upload vulnerability report
-#        uses: github/codeql-action/upload-sarif@v3
-#        if: success() || failure()
-#        with:
-#          sarif_file: ${{ steps.scan.outputs.sarif }}
+      - name: OCI image vulnerability scanning
+        uses: anchore/scan-action@v3
+        id: scan
+        with:
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          fail-build: false
+          severity-cutoff: high
+      - name: Upload vulnerability report
+        uses: github/codeql-action/upload-sarif@v3
+        if: success() || failure()
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
       - name: Log into container registry
         uses: docker/login-action@v3
         with:
